[package]
name = "wpilog-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9.5"
log = "0.4.22"
pretty_env_logger = "0.5.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
thiserror = "2.0.3"

[features]
safe = [] # Currently unused

[[bench]]
name = "parsing"
harness = false
