[package]
name = "wpilog-parser"
version = "0.1.0"
edition = "2021"
authors = ["nukkeldev"]
description = "A parser for the WPILib DataLog format."

[dependencies]
nom = "7.1.3"
thiserror = "2.0.3"

criterion = { version = "0.5.1", features = ["html_reports"] }
memmap2 = "0.9.5"

[[bench]]
name = "parsing"
harness = false
